# django-sorting-bootstrap

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  =2.0  CHANGES.md  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  runtests.py  setup.py
.github/: release-drafter.yml
.github/workflows/: constraints.txt  labeler.yml  release-drafter.yml  release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  reference.rst  requirements.txt  usage.rst
sample/mysite/mysite/: settings.py  urls.py  wsgi.py
sample/mysite/polls/: admin.py  tests.py  views.py
sample/mysite/polls/migrations/: 0001_initial.py
sample/mysite/polls/static/polls/: style.css
sample/mysite/polls/templates/admin/: base_site.html
sample/mysite/polls/templates/polls/: detail.html  index.html  results.html
sample/mysite/templates/admin/: base_site.html
sorting_bootstrap/: compat.py  sort.py  util.py  views.py
sorting_bootstrap/locale/de/LC_MESSAGES/: django.mo
sorting_bootstrap/templates/sorting_bootstrap/: sort_headers_frag.html  sort_th_frag.html
sorting_bootstrap/templatetags/: sorting_tags.py
src/django_sorting_bootstrap/: __init__.py  compat.py  sort.py  tests.py  util.py  views.py
src/django_sorting_bootstrap/locale/de/LC_MESSAGES/: django.po
src/django_sorting_bootstrap/templates/sorting_bootstrap/: sort_headers_frag.html  sort_link_frag.html  sort_th_frag.html
src/django_sorting_bootstrap/templatetags/: __init__.py  sorting_tags.py
src/sorting_bootstrap/: sort.py
tests/: __init__.py  test_views.py
tests/testapp/: settings.py
