[tool.poetry]
name = "django-sorting-bootstrap"
version = "2.7.0"
description = "Sorting templates API using sorting, Django templatetags and Bootstrap classes."
authors = ["Thiago D'Ávila <staticdev-support@protonmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/staticdev/django-sorting-bootstrap"
homepage = "https://github.com/staticdev/django-sorting-bootstrap"
documentation = "https://django-sorting-bootstrap.readthedocs.io"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/django-sorting-bootstrap/releases"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
safety = "^1.10.3"
pytest = "^6.2.1"
mypy = "^0.902"
reorder-python-imports = "^2.3.6"
pre-commit = "^2.9.3"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-django = "^4.1.0"
pygments = "^2.7.4"
xdoctest = "^0.15.0"
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
darglint = "^1.5.8"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
pre-commit-hooks = "^4.0.1"
typeguard = "^2.10.0"
sphinx-rtd-theme = "^0.5.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["django_sorting_bootstrap"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
