[tool.poetry]
name = "django-sorting-bootstrap"
version = "2.7.2"
description = "Sorting templates API using sorting, Django templatetags and Bootstrap classes."
authors = ["Thiago D'Ávila <staticdev-support@protonmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/staticdev/django-sorting-bootstrap"
homepage = "https://github.com/staticdev/django-sorting-bootstrap"
documentation = "https://django-sorting-bootstrap.readthedocs.io"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/django-sorting-bootstrap/releases"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
safety = "^1.10.3"
pytest = "^6.2.5"
mypy = "^0.910"
reorder-python-imports = "^2.6.0"
pre-commit = "^2.15.0"
pytest-django = "^4.1.0"
pygments = "^2.10.0"
xdoctest = "^0.15.10"
sphinx = "^4.3.0"
sphinx-autobuild = "^2021.3.14"
darglint = "^1.8.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
pre-commit-hooks = "^4.0.1"
typeguard = "^2.13.0"
sphinx-rtd-theme = "^1.0.0"
coverage = {version = "6.1.2", extras = ["toml"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["django_sorting_bootstrap"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
